# ALGLM

./: .gitignore  CMakeLists.txt
include/: alglm.h
include/math/: mat3.h  mat4.h  math_utils.h  quat.h  vec2.h  vec3.h  vec4.h
include/scalar/: mat3.h  mat4.h  quat.h  vec2.h  vec3.h  vec4.h
include/simd/: compiler_config.h  platform.h  simd_avx2.h  simd_avx512.h  simd_scalar.h  simd_sse42.h
include/simd_avx2/: avx2_mat3.h  avx2_mat4.h  avx2_math_utils.h  avx2_quat.h  avx2_vec2.h  avx2_vec3.h  avx2_vec4.h
src/: mat3.cpp  mat4.cpp  math_utils.cpp  quat.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/scalar/: mat3.cpp  mat4.cpp  quat.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/simd_avx2/: avx_mat3.cpp  avx_mat4.cpp  avx_math_utils.cpp  avx_quat.cpp  avx_vec2.cpp  avx_vec3.cpp  avx_vec4.cpp
